--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cluber</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <meta name="description" content="Cluber - University Social Network" />
+    <meta name="author" content="Cluber" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
