Update Open Graph image path in index.html for improved sharing

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Cluber</title>
     <meta name="description" content="Cluber - University Social Network" />
     <meta name="author" content="Cluber" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="src/images/cluber.png" />
   </head>
 
   <body>
