--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Cluber</title>
     <meta name="description" content="Cluber - University Social Network" />
     <meta name="author" content="Cluber" />
-    <meta property="og:image" content="src/images/cluber.png" />
+    <meta property="og:image" content="https://i.ibb.co/0jzxvn47/Screenshot-19.png" />
   </head>
 
   <body>
