Update Open Graph meta tags in index.html for enhanced sharing and improved project description

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>Cluber</title>
     <meta name="description" content="Cluber - University Social Network" />
     <meta name="author" content="Cluber" />
-    <meta property="og:image" content="src/images/cluber.png" />
+    <meta property="og:image" content="/cluber.png" />
+    <meta property="og:title" content="Cluber - Red Social Universitaria" />
+    <meta property="og:description" content="Conecta con tu comunidad universitaria a través de Cluber" />
+    <meta property="og:type" content="website" />
   </head>
 
   <body>
